# zdarzenia_nieporzadane_poc

./: .gitignore  CLAUDE.md  adverse-events-guide.md  docker-compose.yml  research-notes.md  start.sh  system-specyfikacja.md
backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 02e682753e75_.py  6c922245c8e8_add_rca_and_actions.py  9bff1a82a5ee_initial.py  a1b2c3d4e5f6_add_users_and_reporter_user_id.py  b2c3d4e5f6a7_add_notifications_and_responsible_user.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: __init__.py  incident.py  notification.py  rca.py  user.py
backend/app/routers/: auth.py  dashboard.py  export.py  incidents.py  notifications.py  rca.py
backend/app/schemas/: auth.py  incident.py  notification.py  rca.py
backend/app/services/: auth.py  dashboard.py  incidents.py  notifications.py  rca.py
backend/tests/: conftest.py  test_actions_api.py  test_auth_api.py  test_authorization.py  test_dashboard_api.py  test_export_api.py  test_incidents_api.py  test_notifications_api.py  test_rca_api.py
backend/zdarzenia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
e2e/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  seed-e2e.py  tsconfig.json
e2e/helpers/: auth.ts  incident.ts
e2e/tests/: coordinator-status-change.spec.ts  incident-filters.spec.ts  login-and-access.spec.ts  rca-flow.spec.ts  (+2 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+49 files in other folders)
